--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,13 +9,27 @@
   <body>
     <header class="header">
       <nav>
-        <h3 class="nav-title">Abdul kha<span class="font-primary">le</span>k</h3>
+        <h3 class="nav-title">
+          Abdul kha<span class="font-primary">le</span>k
+        </h3>
         <ul>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Blog</a></li>
           <li><button class="btn-primary">Hire Me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div>
+          <h3 class="banner-greeting">Hi I am</h3>
+          <p>
+            Shot what able cold new see hold.friendly as an betray formaly he.
+            Morning Because as to scoity behaved moments.
+          </p>
+          <button class="btn-primary">Dounload CV</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        <img class="profile-picture" src="image/image.jpg" alt="">
+      </div>
     </header>
     <main></main>
     <footer></footer>
