--- a/Portfolio.html
+++ b/Portfolio.html
@@ -28,7 +28,7 @@
           <button class="btn-primary">Dounload CV</button>
           <button class="btn-primary">Contact</button>
         </div>
-        <img class="profile-picture" src="image/image.jpg" alt="">
+        <img class="profile-picture" src="image/299478380_2897359333899841_5767400219263095149_n.jpg" alt="">
       </div>
     </header>
     <main></main>
