create about section

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,7 +10,7 @@
     <header class="header">
       <nav>
         <h3 class="nav-title">
-          Abdul kha<span class="font-primary">le</span>k
+          Mo<span class="font-primary">i</span>n
         </h3>
         <ul>
           <li><a href="">Portfolio</a></li>
@@ -21,17 +21,24 @@
       <div class="banner">
         <div>
           <h3 class="banner-greeting">Hi I am</h3>
-          <p>
+          <h1 class="banner-title">Abdul Khalek</h1>
+          <p class="banner-description">
             Shot what able cold new see hold.friendly as an betray formaly he.
             Morning Because as to scoity behaved moments.
           </p>
-          <button class="btn-primary">Dounload CV</button>
+          <button class="btn-primary">Download CV</button>
           <button class="btn-primary">Contact</button>
         </div>
-        <img class="profile-picture" src="image/299478380_2897359333899841_5767400219263095149_n.jpg" alt="">
-      </div>
+        
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">
+          I, m a Software engineers/developers create and develop software applications that allow people to perform specific tasks on the web, computers, or mobile devices. They also develop the underlying systems that control networks, databases, and operating systems
+        </p>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
