--- a/Portfolio.html
+++ b/Portfolio.html
@@ -37,6 +37,24 @@
         <p class="section-description">
           I, m a Software engineers/developers create and develop software applications that allow people to perform specific tasks on the web, computers, or mobile devices. They also develop the underlying systems that control networks, databases, and operating systems
         </p>
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-title">Name</h4>
+            <p class="info-description">Abdul Khalek</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Email</h4>
+            <p class="info-description">akhalek.cu@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Date of Birth</h4>
+            <p class="info-description">01 Jan 1997</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From</h4>
+            <p class="info-description">Ullapara, Sirajgonj</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
