--- a/Portfolio.html
+++ b/Portfolio.html
@@ -56,6 +56,9 @@
           </div>
         </div>
       </section>
+      <section>
+        <h3 class="section-title">what I do</h3>
+      </section>
     </main>
     <footer></footer>
   </body>
