--- a/Portfolio.html
+++ b/Portfolio.html
@@ -57,7 +57,40 @@
         </div>
       </section>
       <section>
-        <h3 class="section-title">what I do</h3>
+        <h3 class="section-title">What I Do</h3>
+        <p id="what-i-do-Description">Strong in design and integration with intuitive problem-solving skills. Proficient in JAVA, C#, PYTHON, JAVASCRIPT, and SQL. Passionate about implementing and launching new projects. Ability to translate business requirements into technical solutions</p>
+        <div class="skill-container">
+          <div class="skill">
+            <img src="image/icons/js.png" alt="">
+            <h3 class="skill-title">Vanila JAVASCRIPT</h3>
+            <p class="skill-description">
+              Vanilla JS is a fast, lightweight, cross-platform framework
+              for building incredible, powerful JavaScript applications.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="image/icons/react.png" alt="">
+            <h3 class="skill-title">React</h3>
+            <p class="skill-description">
+              React lets you build user interfaces out of individual pieces called components. Create your own React components like Thumbnail, LikeButton, and Video. Then combine them into entire screens, pages, and apps.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="image/icons/nodejs.png" alt="">
+            <h3 class="skill-title">Node-JS</h3>
+            <p class="skill-description">
+              Node.js® is a free, open-source, cross-platform JavaScript runtime environment that lets developers create servers, web apps, command line tools and scripts.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="image/icons/mongo.png" alt="">
+            <h3 class="skill-title">Mongodb</h3>
+            <p class="skill-description">
+              MongoDB is a source-available, cross-platform, document-oriented database program. Classified as a NoSQL database product, MongoDB utilizes JSON-like documents with optional schemas. MongoDB is developed by MongoDB Inc. and current versions are licensed under the Server Side Public License (SSPL). MongoDB is a member of the MACH Alliance
+            </p>
+          </div>
+
+        </div>
       </section>
     </main>
     <footer></footer>
