--- a/Portfolio.html
+++ b/Portfolio.html
@@ -92,6 +92,43 @@
 
         </div>
       </section>
+      <!--Resume section-->
+      <section>
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+
+            <div class="resume-item">
+              <h2 class="resume-item-title">BSc in Computer Science Engineering</h2>
+              <h3 class="resume-item-insttitute">City Univerity of Bangladesh / 2017 - 2021</h3>
+              <p class="resume-item-description">An enthusiastic IT personnel eager to contribute to
+                team success through hard work, attention to detail
+                and excellent organizational skills. Clear understanding
+                of work ethic and interest in development, technology,
+                smartphones and smart devices. Motivated to learn,
+                grow and excel in the IT and telecom industry
+                </p>
+            </div>
+            <hr>
+            <div class="resume-item">
+              <h2 class="resume-item-title">BSc in Computer Science Engineering</h2>
+              <h3 class="resume-item-insttitute">City Univerity of Bangladesh / 2017 - 2021</h3>
+              <p class="resume-item-description">An enthusiastic IT personnel eager to contribute to
+                team success through hard work, attention to detail
+                and excellent organizational skills. Clear understanding
+                of work ethic and interest in development, technology,
+                smartphones and smart devices. Motivated to learn,
+                grow and excel in the IT and telecom industry
+                </p>
+            </div>
+
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
