--- a/Portfolio.html
+++ b/Portfolio.html
@@ -100,7 +100,7 @@
             <h3 class="resume-column-title">My Education</h3>
 
             <div class="resume-item">
-              <h2 class="resume-item-title">BSc in Computer Science Engineering</h2>
+              <h2 class="resume-item-title">B.Sc in Computer Science Engineering</h2>
               <h3 class="resume-item-insttitute">City Univerity of Bangladesh / 2017 - 2021</h3>
               <p class="resume-item-description">An enthusiastic IT personnel eager to contribute to
                 team success through hard work, attention to detail
@@ -112,7 +112,7 @@
             </div>
             <hr>
             <div class="resume-item">
-              <h2 class="resume-item-title">BSc in Computer Science Engineering</h2>
+              <h2 class="resume-item-title">B.Sc in Computer Science Engineering</h2>
               <h3 class="resume-item-insttitute">City Univerity of Bangladesh / 2017 - 2021</h3>
               <p class="resume-item-description">An enthusiastic IT personnel eager to contribute to
                 team success through hard work, attention to detail
@@ -126,6 +126,20 @@
           </div>
           <div class="resume-column">
             <h3 class="resume-column-title">My Experience</h3>
+            <div class="resume-item">
+              <h2 class="resume-item-title">Accounts Executive</h2>
+              <h3 class="resume-item-insttitute">NZTRIP / 1st Jan 2024 - Present</h3>
+              <p class="resume-item-description">Accounce Software Maintainance
+                </p>
+            </div>
+            <hr>
+            <div class="resume-item">
+              <h2 class="resume-item-title">IT Executive</h2>
+              <h3 class="resume-item-insttitute">NZ WORLD TRAVELS/ 1st JAN 2023 - 31st Dec 2023</h3>
+              <p class="resume-item-description"> 
+                Digital Marketing like Facebook Boosting, IT Support
+                </p>
+            </div>
           </div>
         </div>
       </section>
